<resources>
    <string name="app_name">ReclyclerViewExo</string>
    <string name="m_mo_n_1">Mémo n°1</string>
    <string name="ok">OK</string>
    <string name="saisir_un_m_mo">Saisir un mémo...</string>
    <string name="no_co">Aucune Connexion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
